# YYS_Quiz

./: Dockerfile  compose.local.yml  compose.yml  pyproject.toml
config/: settings.py  urls.py
config/nginx/: nginx.conf
quiz/: views.py
