[project]
name = "global-knowledge-quiz"
version = "0.1.0"
description = ""
authors = [
    {name = "yoon-yoo-sang",email = "yyss6188@naver.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=5.2,<6.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "drf-spectacular (>=0.28.0,<0.29.0)",
    "celery (>=5.5.2,<6.0.0)",
    "django-redis (>=5.4.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
